devops/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cartit
  labels:
    app.kubernetes.io/name: cartit
    environment: production
