devops/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cartit-frontend-svc
  namespace: cartit
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "external"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
spec:
  type: LoadBalancer
  selector:
    app: cartit-frontend
  ports:
    - name: http
      port: 80
      targetPort: 8080
